--- a/assets/style.css
+++ b/assets/style.css
@@ -1,2 +1,19 @@
-body {
+html, body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+}
+
+.flex-fill {
+  flex:1 1 auto;
+}
+
